completed production build config and npm scripts converted mailing list signup to container component wired up mailing list signup form added validation to mailing list signup form

--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "scss": "node-sass --output-style expanded -o src/styles src/site.scss",
     "scss:watch": "npm run scss -- --watch",
     "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "node_modules/.bin/rimraf ./dist",
+    "build:html": "babel-node tools/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist test lint build:html",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js"
   },
   "author": "Jim Hoy (jim.hoy@gmail.com)",
   "license": "MIT",
