--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "remove-dist": "node_modules/.bin/rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
     "prebuild": "npm-run-all clean-dist test lint build:html",
-    "build": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/distServer.js"
+    "build": "babel-node tools/build.js"
   },
   "author": "Jim Hoy (jim.hoy@gmail.com)",
   "license": "MIT",
